--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -13,10 +13,10 @@ epidrome:
   twitter: "@ep1dr0me"
 # copy-paste and then edit the example bellow
 exampleyourauthorname:
-  name: "your real name"
-  siterole: "very short description"
+  name: "Chara Papageorgiou"
+  siterole: "student, teacher, developer"
   uri: "your home page"
-  email: "your email"
+  email: "charapapageorgiou1@gmail.com"
   twitter: "@your twitter account"
 # you can add more authors bellow this comment
 #
