--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -12,11 +12,11 @@ epidrome:
   email: "hi@epidro.me"
   twitter: "@ep1dr0me"
 # copy-paste and then edit the example bellow
-exampleyourauthorname:
-  name: "your real name"
-  siterole: "very short description"
+chpapage:
+  name: "Chara Papageorgiou"
+  siterole: "student, teacher, developer"
   uri: "your home page"
-  email: "your email"
+  email: "charapapageorgiou1@gmail.com"
   twitter: "@your twitter account"
 # you can add more authors bellow this comment
 #
