--- a/_config.yml
+++ b/_config.yml
@@ -57,16 +57,16 @@ credits: '<p>Created with &hearts; by <a href="http://www.epidro.me">epidrome</a
 
 # Main author of the website
 # See > authors.yml
-author: "epidrome"
+author: "chpapage"
 
 # This URL is the main adresse. Don't include a slash at the end.
 #
-url: "http://www.pibook.gr"
+url: "https://chpapage1.github.io/pibookgr"
 baseurl: ""
 
 # This is for the editing function in _/includes/improve_content.html
 # Leave it empty if your site is not on GitHub/GitHub Pages
-improve_content: https://github.com/pibook/pibookgr/edit/gh-pages
+improve_content: https://github.com/chpapage1/pibookgr/edit/gh-pages
 
 # This URL points directly to the images directory making
 # things easier to link to images in posts and templates. It needs a slash.
