--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ author: "chpapage"
 
 # This URL is the main adresse. Don't include a slash at the end.
 #
-url: "https://chpapage1.github.io/pibookgr/"
+url: "https://chpapage1.github.io/pibookgr"
 baseurl: ""
 
 # This is for the editing function in _/includes/improve_content.html
