--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ collections:
     permalink: /case-study/:path/
   gallery:
     output: true
-    permalink: /gallery/:path/
+    permalink: gallery/:path/
   header:
     output: false
 
