--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ collections:
     permalink: /case-study/:path/
   gallery:
     output: true
-    permalink: /gallery/:path/
+    permalink: gallery/:path/
   header:
     output: false
 
@@ -74,7 +74,7 @@ improve_content: https://github.com/chpapage1/pibookgr/edit/gh-pages
 # Example: <img src="{{ site.urlimg }}/{{ post.image.title }}">
 # Markdown-Example for posts ![Image Text]({{ site.urlimg }}/image.jpg)
 #
-urlimg: "images/"
+urlimg: "pibookgr/images/"
 
 
 # Logo size is 600x80 pixels
