--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ collections:
     permalink: /bibliography/:path/
   biography:
     output: true
-    permalink: pibookgr/biography/:path/
+    permalink: /biography/:path/
   case-study:
     output: true
     permalink: pibookgr/case-study/:path/
